# AM

./: .env  .gitignore  README.md  db.sqlite3  db_business_1.sqlite3  db_business_Alitas.sqlite3  db_business_Asados_el_mello.sqlite3  db_business_Business_Intelligence.sqlite3  db_django_core.sqlite3  pyproject.toml  requirements.txt
app/accounts/: __init__.py  admin.py  apps.py  signals.py
app/accounts/api/: serializers.py  urls.py
app/accounts/migrations/: 0001_initial.py  0002_businessjoinrequest.py  0002_initial.py  0003_businessinvitation.py  0004_businessjoinrequest_message.py
app/accounts/models/: __init__.py  business.py  user.py
app/accounts/services/: business_service.py  join_service.py  role_service.py
app/auth_app/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
app/auth_app/api/: serializers.py  urls.py  views.py
app/auth_app/migrations/: 0001_initial.py  0002_businessjoinrequest.py  0002_customuser_alter_business_owner_delete_user.py  0002_remove_customuser_role_alter_customuser_groups.py  0003_alter_business_owner.py  0003_businessinvitation.py  0004_alter_business_owner_alter_customuser_business.py  0004_businessjoinrequest_message.py  0005_alter_business_owner_alter_customuser_business.py  0006_business_address_business_description_business_email_and_more.py  (+2 more)
app/business/: admin.py  apps.py  signals.py
app/core/: admin.py
app/ping/: apps.py  serializers.py  urls.py  views.py
app/roles/: admin.py  apps.py
config/: db_router.py  db_routers.py  middleware.py  settings.py  urls.py
(+37 files in other folders)
