[tool.poetry]
name = "AMB"
version = "0.0.1"
description = "App Micros servicio de pedidos, para restaurantes"
authors = ["Mateo Osorio Higuita"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.7"
djangorestframework = "^3.15.2"
django-filter = "^25.1"
Markdown = "^3.7"
pillow = "^11.1.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
